# nvidia-arch

./: .gitignore  CITATION.cff  MANIFEST.in  NVIDIA-ARCH.md  README.md  pyproject.toml
.github/workflows/: build.yaml  explorer.yaml  publish.yaml  test.yaml
nvidia_arch/: __init__.py  arches.py  core.py
tests/: test_arch_strings.py  test_arches.py  test_functions.py
tools/: extract_cuda_arch_info.py
